2007-12-17  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #6996: Versioning in clickmenu was unavailable for non-admins due to a problem of an earlier bugfix #4160 (Thanks to Helmut Hummel for the correction)

2007-12-17 Andreas Otto <andreas.otto@dkd.de>

	* Feature request #6945: Login failures can be logged with t3lib_div::syslog().

2007-12-16  Benjamin Mack  <mack@xnos.org>

	* (bugfix) #6955: fileadmin contextual menu doesn't popup well

2007-12-16  Ingo Renner	<ingo@typo3.org>

	* removed width css property from workspace selector toolbar item as it caused layout issues in non english backends

2007-12-16  Benjamin Mack  <mack@xnos.org>

	* (bugfix) #6859: Taskcenter - Submodules are not shown (fixed backwards-compatibility by Malte Jansen)
	* (bugfix) #6879: Sticky top icons in alt_doc: missing
	   button when columnsOnly is set

2007-12-15  Ingo Renner	<ingo@typo3.org>

	* fixed bug #6921: labels in t3lib/stddb/tbl_be.php hardcoded

2007-12-15  Benjamin Mack  <mack@xnos.org>

	* (cleanup) #6826: Removed "Show Description for Fields" checkbox in alt_doc.php

2007-12-14  Thomas Hempel  <thomas@typo3-unleashed.net>

	* Fixed wrong update meachnism in method call
	* Fixed some small typos in database module (Thanks to Francois Suter)

2007-12-13  Oliver Hader  <oh@inpublica.de>

	* (major) Fixed bug #6924: t3lib_div::readLLXMLfile does not use localized content anymore

2007-12-13  Thomas Hempel  <thomas@typo3-unleashed.net>

	* Finished DB compare against stddb/tables.sql (need testing)

2007-12-12  Thomas Hempel  <thomas@typo3-unleashed.net>

	* Bugfix: Invalid call to viewObj
	* Added support for fieldsets in renderMethod "form"
	* Added ability to send forms via AJAX
	* improved DB compare code (Thanks to Francois Suter)

2007-12-11  Thomas Hempel  <thomas@typo3-unleashed.net>

	* Added support for listing and calling methods in new installer

2007-12-10  Ingmar Schlecht  <ingmar@typo3.org>
